fixing coffee and scss

--- a/src/dashing.net/Views/Shared/Layout.cshtml
+++ b/src/dashing.net/Views/Shared/Layout.cshtml
@@ -8,11 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Title</title>
     
-    @Scripts.Render("~/bundles/application")
+    @Scripts.Render("~/bundles/application-js")
+    @Styles.Render("~/bundles/application-css")
 
-
-    <link rel="stylesheet" href="/assets/stylesheets/application.css"/>
-    
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="icon" href="/assets/favicon.ico">
 </head>
