--- a/src/dashing.net/Views/Dashboard/Sampletv.cshtml
+++ b/src/dashing.net/Views/Dashboard/Sampletv.cshtml
@@ -1,10 +1,10 @@
-﻿<script type='text/javascript'>
+﻿<script type="text/javascript">
     $(function () {
-    // These settings override the defaults set in application.coffee. You can do this on a per dashboard basis.
-    Dashing.gridsterLayout('[{"col":2,"row":1},{"col":1,"row":1},{"col":3,"row":1},{"col":2,"row":2},{"col":3,"row":2},{"col":1,"row":2},{"col":5,"row":1},{"col":4,"row":2},{"col":2,"row":3}]')
-    Dashing.widget_base_dimensions = [370, 340]
-    Dashing.numColumns = 5
-});
+            // These settings override the defaults set in application.coffee. You can do this on a per dashboard basis.
+        Dashing.gridsterLayout('[{"col":2,"row":1},{"col":1,"row":1},{"col":3,"row":1},{"col":2,"row":2},{"col":3,"row":2},{"col":1,"row":2},{"col":5,"row":1},{"col":4,"row":2},{"col":2,"row":3}]');
+        Dashing.widget_base_dimensions = [370, 340];
+        Dashing.numColumns = 5;
+    });
 </script>
 
 
@@ -15,7 +15,7 @@
       <i class="icon-time icon-background"></i>
     </li>
 
-    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Image" data-image="/logo.png"></div>
     </li>
 
