--- a/src/dashing.net/Views/Dashboard/Sample.cshtml
+++ b/src/dashing.net/Views/Dashboard/Sample.cshtml
@@ -24,5 +24,5 @@
       <div data-id="convergence" data-view="Graph" data-title="Convergence" style="background-color:#ff9618"></div>
     </li>
   </ul>
-  <center><div style="font-size: 12px">Try this: curl -d '{ "auth_token": "YOUR_AUTH_TOKEN", "text": "Hey, Look what I can do!" }' \http://{@Request.Path}/widgets/welcome</div></center>
+  <center><div style="font-size: 12px">Try this: curl -d "{ 'auth_token': 'YOUR_AUTH_TOKEN', 'text': 'Hey, Look what I can do!' }" @Request.Url.Scheme://@Request.Url.Host:@Request.Url.Port/widgets/welcome</div></center>
 </div>
