--- a/src/dashing.net/Views/Shared/Layout.cshtml
+++ b/src/dashing.net/Views/Shared/Layout.cshtml
@@ -6,6 +6,9 @@
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
+    <link rel="shortcut icon" type="image/x-icon" href="~/Assets/favicon.ico"/>
+    
     <title>Title</title>
     
     @Scripts.Render("~/bundles/application-js")
