Updated the title in the layout

--- a/src/dashing.net/Views/Shared/Layout.cshtml
+++ b/src/dashing.net/Views/Shared/Layout.cshtml
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="~/Assets/favicon.ico"/>
     
-    <title>Title</title>
+    <title>dashing.net</title>
     
     @Scripts.Render("~/bundles/application-js")
     @Styles.Render("~/bundles/application-css")
